--- a/Resources/Prototypes/Roles/Jobs/Wildcards/boxer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Wildcards/boxer.yml
@@ -28,7 +28,7 @@
   equipment:
     jumpsuit: UniformShortsRed
     back: ClothingBackpackFilled
-    id: BoxerPDA
+    id: PrisonerPDA
     ears: ClothingHeadsetService
     gloves: ClothingHandsGlovesBoxingRed
     shoes: ClothingShoesColorRed
