--- a/Resources/Prototypes/Guidebook/rules.yml
+++ b/Resources/Prototypes/Guidebook/rules.yml
@@ -1,6 +1,6 @@
 - type: guideEntry
-  id: SS14
-  name: guide-entry-ss14
+  id: Rules
+  name: guide-entry-rules
   text: "/ServerInfo/Rules.txt"
   children:
   - Controls
